--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,6 @@
 		<div id="popovers"></div>
 
 		<script> window.csrf_token = '{{ csrf_token }}'; </script>
-		<script type="module" src="/src/main.js"></script>
+		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
