--- a/frontend/renderer.html
+++ b/frontend/renderer.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <!-- Built with Frappe Studio -->
-<html lang="en">
+<html lang="en" class="h-full">
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>{{ app_title }}</title>
 	</head>
-	<body>
-		<div id="app"></div>
+	<body class="h-full">
+		<div id="app" class="h-full"></div>
 		<div id="modals"></div>
 		<div id="popovers"></div>
 		<script>
