--- a/frontend/renderer.html
+++ b/frontend/renderer.html
@@ -13,6 +13,7 @@
 		<div id="popovers"></div>
 		<script>
 			window.csrf_token = "{{ csrf_token }}";
+			window.is_preview = "{{ is_preview }}";
 			window.app_name = "{{ app_name }}";
 			window.app_route = "{{ app_route }}";
 			window.app_title = "{{ app_title }}";
