--- a/frontend/renderer.html
+++ b/frontend/renderer.html
@@ -29,7 +29,7 @@
 
 		{% if assets_not_found %}
 		<script>
-			console.error("Studio App is running in Production mode, but app assets are missing. Currently, using the default renderer as a fallback. To fix this:\n1. Please publish the app to generate assets \n2. Or switch to Development mode in the Studio App document")
+			console.error("Could not find app assets for Studio App. Currently, using the default renderer as a fallback. Please publish the app again to generate assets.")
 		</script>
 		{% endif %}
 	</body>
